[package]
name = "fftut1"
version = "0.1.0"
authors = ["syntheticsh <syntheticsh@intersvyaz.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.23"
sdl2 = "0.34"

[dependencies.ffmpeg-next]
git = "https://github.com/syntheticsh/rust-ffmpeg.git"

[[bin]]
name = "tut1"
path = "src/tut1/main.rs"

[[bin]]
name = "tut2"
path = "src/tut2/main.rs"
